--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
                 android:gravity="center"
                 android:layout_margin="16dp"
                 android:text="Home"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 android:textSize="14sp"/>
 
             <TextView
@@ -34,7 +34,7 @@
                 android:gravity="center"
                 android:layout_margin="24dp"
                 android:text="0"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 android:textSize="50sp"/>
 
             <Button
@@ -94,7 +94,7 @@
                 android:gravity="center"
                 android:layout_margin="16dp"
                 android:text="Visitor"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 android:textSize="14sp"/>
 
             <TextView
@@ -104,7 +104,7 @@
                 android:gravity="center"
                 android:layout_margin="24dp"
                 android:text="0"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 android:textSize="50sp"/>
 
             <Button
