--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
                 android:layout_margin="16dp"
                 android:text="Home"
                 android:textColor="#FFFFFF"
+                android:fontFamily="sans-serif-black"
                 android:textSize="14sp"/>
 
             <TextView
@@ -35,9 +36,11 @@
                 android:layout_margin="24dp"
                 android:text="0"
                 android:textColor="#FFFFFF"
+                android:fontFamily="sans-serif-black"
                 android:textSize="50sp"/>
 
             <Button
+                android:fontFamily="sans-serif-black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -47,6 +50,7 @@
                 android:text="Extra Point"/>
 
             <Button
+                android:fontFamily="sans-serif-black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -56,6 +60,7 @@
                 android:text="Safeties/ 2 pt Conversion"/>
 
             <Button
+                android:fontFamily="sans-serif-black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -65,6 +70,7 @@
                 android:text="Field Goal"/>
 
             <Button
+                android:fontFamily="sans-serif-black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -89,6 +95,7 @@
             android:orientation="vertical" >
 
             <TextView
+                android:fontFamily="sans-serif-black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -98,6 +105,7 @@
                 android:textSize="14sp"/>
 
             <TextView
+                android:fontFamily="sans-serif-black"
                 android:id="@+id/visitor_score"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -108,6 +116,7 @@
                 android:textSize="50sp"/>
 
             <Button
+                android:fontFamily="sans-serif-black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -117,6 +126,7 @@
                 android:text="Extra Point"/>
 
             <Button
+                android:fontFamily="sans-serif-black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -126,6 +136,7 @@
                 android:text="Safeties/ 2 pt Conversion"/>
 
             <Button
+                android:fontFamily="sans-serif-black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -135,6 +146,7 @@
                 android:text="Field Goal"/>
 
             <Button
+                android:fontFamily="sans-serif-black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -148,6 +160,7 @@
     </LinearLayout>
 
     <Button
+        android:fontFamily="sans-serif-black"
         android:id="@+id/resetButton"
         android:text="Reset"
         android:layout_width="wrap_content"
