--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
                     android:textSize="20sp" />
 
                 <TextView
+                    android:id="@+id/safetiesCountHome"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -55,6 +56,7 @@
                     android:textSize="20sp" />
 
                 <TextView
+                    android:id="@+id/fieldGoalCountHome"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -65,6 +67,7 @@
                     android:textSize="20sp" />
 
                 <TextView
+                    android:id="@+id/touchdownCountHome"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -162,6 +165,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/extraPointCountVisitor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -172,6 +176,7 @@
                     android:textSize="20sp" />
 
                 <TextView
+                    android:id="@+id/safetiesCountVisitor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -237,6 +242,7 @@
                 android:textColor="#d68f00" />
 
             <Button
+                android:id="@+id/fieldGoalCountVisitor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
@@ -248,6 +254,7 @@
                 android:textColor="#cf2e02" />
 
             <Button
+                android:id="@+id/touchdownCountVisitor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="24dp"
